--- a/scilab/modules/matio/matio.vcproj
+++ b/scilab/modules/matio/matio.vcproj
@@ -6,6 +6,7 @@
 	ProjectGUID="{7757B22F-9512-4380-9E40-EFD50575028D}"
 	RootNamespace="matio"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="0"
 	>
 	<Platforms>
 		<Platform
@@ -43,7 +44,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="includes;src/c;../core/includes;../output_stream/includes;../windows_tools/includes;../localization/includes;../../libs/MALLOC/includes;../../libs/intl;../../libs/matio;../../libs/zlib;../operations/includes"
+				AdditionalIncludeDirectories="includes;src/c;../core/includes;../output_stream/includes;../windows_tools/includes;../localization/includes;../../libs/MALLOC/includes;../../libs/intl;../../libs/matio;../../libs/zlib"
 				PreprocessorDefinitions="FORDLL;_DEBUG;_WINDOWS;_USRDLL;MATIO_EXPORTS;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="0"
@@ -125,7 +126,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="includes;src/c;../core/includes;../output_stream/includes;../windows_tools/includes;../localization/includes;../../libs/MALLOC/includes;../../libs/intl;../../libs/matio;../../libs/zlib;../operations/includes"
+				AdditionalIncludeDirectories="includes;src/c;../core/includes;../output_stream/includes;../windows_tools/includes;../localization/includes;../../libs/MALLOC/includes;../../libs/intl;../../libs/matio;../../libs/zlib"
 				PreprocessorDefinitions="FORDLL;_DEBUG;_WINDOWS;_USRDLL;MATIO_EXPORTS;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="0"
@@ -209,7 +210,7 @@
 				InlineFunctionExpansion="1"
 				FavorSizeOrSpeed="1"
 				WholeProgramOptimization="false"
-				AdditionalIncludeDirectories="includes;src/c;../core/includes;../output_stream/includes;../windows_tools/includes;../localization/includes;../../libs/MALLOC/includes;../../libs/intl;../../libs/matio;../../libs/zlib;../operations/includes"
+				AdditionalIncludeDirectories="includes;src/c;../core/includes;../output_stream/includes;../windows_tools/includes;../localization/includes;../../libs/MALLOC/includes;../../libs/intl;../../libs/matio;../../libs/zlib"
 				PreprocessorDefinitions="FORDLL;NDEBUG;_WINDOWS;_USRDLL;MATIO_EXPORTS;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="2"
@@ -299,7 +300,7 @@
 				InlineFunctionExpansion="1"
 				FavorSizeOrSpeed="1"
 				WholeProgramOptimization="false"
-				AdditionalIncludeDirectories="includes;src/c;../core/includes;../output_stream/includes;../windows_tools/includes;../localization/includes;../../libs/MALLOC/includes;../../libs/intl;../../libs/matio;../../libs/zlib;../operations/includes"
+				AdditionalIncludeDirectories="includes;src/c;../core/includes;../output_stream/includes;../windows_tools/includes;../localization/includes;../../libs/MALLOC/includes;../../libs/intl;../../libs/matio;../../libs/zlib"
 				PreprocessorDefinitions="FORDLL;NDEBUG;_WINDOWS;_USRDLL;MATIO_EXPORTS;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="2"
