--- a/scilab/modules/sparse/src/c/sparse.vcproj
+++ b/scilab/modules/sparse/src/c/sparse.vcproj
@@ -5,6 +5,7 @@
 	Name="sparse"
 	ProjectGUID="{51240B08-5E4E-439B-B745-C870D5B513BF}"
 	RootNamespace="sparse"
+	TargetFrameworkVersion="0"
 	>
 	<Platforms>
 		<Platform
@@ -44,7 +45,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../includes;../../../output_stream/includes;../../../localization/includes;../../../core/includes;../../../../libs/MALLOC/includes;../../../../libs/intl;../../../operations/includes"
+				AdditionalIncludeDirectories="../../includes;../../../output_stream/includes;../../../localization/includes;../../../core/includes;../../../../libs/MALLOC/includes;../../../../libs/intl"
 				PreprocessorDefinitions="_LIB;_DEBUG;_CRT_SECURE_NO_DEPRECATE"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="3"
@@ -120,7 +121,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../includes;../../../output_stream/includes;../../../localization/includes;../../../core/includes;../../../../libs/MALLOC/includes;../../../../libs/intl;../../../operations/includes"
+				AdditionalIncludeDirectories="../../includes;../../../output_stream/includes;../../../localization/includes;../../../core/includes;../../../../libs/MALLOC/includes;../../../../libs/intl"
 				PreprocessorDefinitions="_LIB;_DEBUG;_CRT_SECURE_NO_DEPRECATE"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="3"
@@ -197,7 +198,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="../../includes;../../../output_stream/includes;../../../localization/includes;../../../core/includes;../../../../libs/MALLOC/includes;../../../../libs/intl;../../../operations/includes"
+				AdditionalIncludeDirectories="../../includes;../../../output_stream/includes;../../../localization/includes;../../../core/includes;../../../../libs/MALLOC/includes;../../../../libs/intl"
 				PreprocessorDefinitions="NDEBUG;_LIB;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="2"
@@ -276,7 +277,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="../../includes;../../../output_stream/includes;../../../localization/includes;../../../core/includes;../../../../libs/MALLOC/includes;../../../../libs/intl;../../../operations/includes"
+				AdditionalIncludeDirectories="../../includes;../../../output_stream/includes;../../../localization/includes;../../../core/includes;../../../../libs/MALLOC/includes;../../../../libs/intl"
 				PreprocessorDefinitions="NDEBUG;_LIB;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="2"
