--- a/scilab/modules/tclsci/tclsci.vcproj
+++ b/scilab/modules/tclsci/tclsci.vcproj
@@ -6,6 +6,7 @@
 	ProjectGUID="{C456D5B8-8A32-496A-A2EE-164B0D734126}"
 	RootNamespace="tclsci"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="0"
 	>
 	<Platforms>
 		<Platform
@@ -43,7 +44,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;includes;src/c;../../libs/MALLOC/includes;../core/includes;includes\tcltk;includes\tcltk\X11;../action_binding/includes;../output_stream/includes;../localization/includes;../../libs/intl;../windows_tools/includes;../fileio/includes;../operations/includes"
+				AdditionalIncludeDirectories=".;includes;src/c;../../libs/MALLOC/includes;../core/includes;includes\tcltk;includes\tcltk\X11;../action_binding/includes;../output_stream/includes;../localization/includes;../../libs/intl;../windows_tools/includes;../fileio/includes"
 				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;FORDLL;_DEBUG;_WINDOWS;_USRDLL;TCLSCI_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="0"
@@ -125,7 +126,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;includes;src/c;../../libs/MALLOC/includes;../core/includes;includes\tcltk;includes\tcltk\X11;../action_binding/includes;../output_stream/includes;../localization/includes;../../libs/intl;../windows_tools/includes;../fileio/includes;../operations/includes"
+				AdditionalIncludeDirectories=".;includes;src/c;../../libs/MALLOC/includes;../core/includes;includes\tcltk;includes\tcltk\X11;../action_binding/includes;../output_stream/includes;../localization/includes;../../libs/intl;../windows_tools/includes;../fileio/includes"
 				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;FORDLL;_DEBUG;_WINDOWS;_USRDLL;TCLSCI_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="0"
@@ -209,7 +210,7 @@
 				InlineFunctionExpansion="1"
 				FavorSizeOrSpeed="1"
 				WholeProgramOptimization="false"
-				AdditionalIncludeDirectories=".;includes;src/c;../../libs/MALLOC/includes;../core/includes;includes\tcltk;includes\tcltk\X11;../action_binding/includes;../output_stream/includes;../localization/includes;../../libs/intl;../windows_tools/includes;../fileio/includes;../operations/includes"
+				AdditionalIncludeDirectories=".;includes;src/c;../../libs/MALLOC/includes;../core/includes;includes\tcltk;includes\tcltk\X11;../action_binding/includes;../output_stream/includes;../localization/includes;../../libs/intl;../windows_tools/includes;../fileio/includes"
 				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;FORDLL;NDEBUG;_WINDOWS;_USRDLL;TCLSCI_EXPORTS"
 				StringPooling="true"
 				RuntimeLibrary="2"
@@ -298,7 +299,7 @@
 				InlineFunctionExpansion="1"
 				FavorSizeOrSpeed="1"
 				WholeProgramOptimization="false"
-				AdditionalIncludeDirectories=".;includes;src/c;../../libs/MALLOC/includes;../core/includes;includes\tcltk;includes\tcltk\X11;../action_binding/includes;../output_stream/includes;../localization/includes;../../libs/intl;../windows_tools/includes;../fileio/includes;../operations/includes"
+				AdditionalIncludeDirectories=".;includes;src/c;../../libs/MALLOC/includes;../core/includes;includes\tcltk;includes\tcltk\X11;../action_binding/includes;../output_stream/includes;../localization/includes;../../libs/intl;../windows_tools/includes;../fileio/includes"
 				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;FORDLL;NDEBUG;_WINDOWS;_USRDLL;TCLSCI_EXPORTS"
 				StringPooling="true"
 				RuntimeLibrary="2"
