--- a/scilab/modules/elementary_functions/Makefile.in
+++ b/scilab/modules/elementary_functions/Makefile.in
@@ -1150,7 +1150,8 @@ libscielementary_functions_la_CFLAGS = -I$(srcdir)/includes/ \
 -I$(top_srcdir)/libs/MALLOC/includes/ \
 -I$(srcdir)/src/c/ \
 -I$(top_srcdir)/modules/output_stream/includes \
--I$(top_srcdir)/modules/double/includes/
+-I$(top_srcdir)/modules/double/includes/ \
+-I$(top_srcdir)/modules/api_scilab/includes/
 
 pkglib_LTLIBRARIES = libscielementary_functions.la
 libscielementary_functions_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION)
