--- a/scilab/modules/elementary_functions/src/cpp/elem_func/elem_func.vcproj
+++ b/scilab/modules/elementary_functions/src/cpp/elem_func/elem_func.vcproj
@@ -66,7 +66,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="&quot;$(SolutionDir)bin\$(ProjectName).dll&quot;"
-				IgnoreDefaultLibraryNames="MSVCRT.lib"
+				IgnoreDefaultLibraryNames=""
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -138,7 +138,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="&quot;$(SolutionDir)bin\$(ProjectName).dll&quot;"
-				IgnoreDefaultLibraryNames="MSVCRT.lib"
+				IgnoreDefaultLibraryNames=""
 				TargetMachine="17"
 			/>
 			<Tool
@@ -211,6 +211,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="&quot;$(SolutionDir)bin\$(ProjectName).dll&quot;"
+				IgnoreDefaultLibraryNames=""
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -283,6 +284,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="&quot;$(SolutionDir)bin\$(ProjectName).dll&quot;"
+				IgnoreDefaultLibraryNames=""
 				TargetMachine="17"
 			/>
 			<Tool
