--- a/scilab/modules/scicos/Makefile.in
+++ b/scilab/modules/scicos/Makefile.in
@@ -787,21 +787,19 @@ HELP_CHAPTERLANG = en_US fr_FR pt_BR
 
 #### scicos : cosf files ####
 @SCICOS_TRUE@libsciscicos_la_cosfdir = $(mydatadir)
-@SCICOS_TRUE@nobase_libsciscicos_la_cosf_DATA = macros/scicos_scicos/Branching.cosf \
-@SCICOS_TRUE@macros/scicos_scicos/DemoBlocks.cosf \
-@SCICOS_TRUE@macros/scicos_scicos/Events.cosf \
-@SCICOS_TRUE@macros/scicos_scicos/Integer.cosf \
-@SCICOS_TRUE@macros/scicos_scicos/Linear.cosf \
-@SCICOS_TRUE@macros/scicos_scicos/Matrix.cosf \
-@SCICOS_TRUE@macros/scicos_scicos/Non_linear.cosf \
-@SCICOS_TRUE@macros/scicos_scicos/OldBlocks.cosf \
-@SCICOS_TRUE@macros/scicos_scicos/Others.cosf \
-@SCICOS_TRUE@macros/scicos_scicos/Sinks.cosf \
-@SCICOS_TRUE@macros/scicos_scicos/Sources.cosf \
-@SCICOS_TRUE@macros/scicos_scicos/Threshold.cosf
+@SCICOS_TRUE@nobase_libsciscicos_la_cosf_DATA = palettes/Branching.cosf \
+@SCICOS_TRUE@palettes/DemoBlocks.cosf \
+@SCICOS_TRUE@palettes/Events.cosf \
+@SCICOS_TRUE@palettes/Integer.cosf \
+@SCICOS_TRUE@palettes/Linear.cosf \
+@SCICOS_TRUE@palettes/Matrix.cosf \
+@SCICOS_TRUE@palettes/Non_linear.cosf \
+@SCICOS_TRUE@palettes/OldBlocks.cosf \
+@SCICOS_TRUE@palettes/Others.cosf \
+@SCICOS_TRUE@palettes/Sinks.cosf \
+@SCICOS_TRUE@palettes/Sources.cosf \
+@SCICOS_TRUE@palettes/Threshold.cosf
 
-#macros/scicos_scicos/Electrical.cosf \
-#macros/scicos_scicos/ThermoHydraulics.cosf
 
 #### scicos : MACROS ####
 @SCICOS_TRUE@MACROSDIRSEXT = macros/scicos_auto \
